webservice/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: crownlabs/frontend
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: regcred
