webservice/kubernetes/ingress-callback.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers:  "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
  name: frontend-auxiliary
  namespace: frontend
spec:
  rules:
    - host: crownlabs.polito.it
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /callback
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /logout
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /userview
  tls:
    - hosts:
        - crownlabs.polito.it
      secretName: frontend-cert
